--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "Trip4U",
   "version": "1.0.0",
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "tedious-connection-pool": "latest",
+    "tedious": "latest"
   }
 }
